Fix documentation. Add errors handling
